--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: 'Outfit', sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(22, 29, 47);
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: rgb(90, 105, 143);
+    border-radius: 10px;
+    border: 3px none rgb(255, 255, 255);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
