--- a/src/styles/AppLayout.module.css
+++ b/src/styles/AppLayout.module.css
@@ -7,6 +7,7 @@
     grid-template-rows: auto;
     height: 100vh;
     width: 100vw;
+    
 }
 
 .nav {
@@ -23,6 +24,28 @@
 .content {
     padding: 2.2rem 0 2rem 1rem;
     grid-area: cont;
-    /* overflow-y: scroll; */
-    padding-left: 1rem;
+}
+
+@media only screen and (max-width: 1271px) {
+    .page {
+        grid-template-areas: 
+        'nav nav nav nav nav nav nav nav nav nav'
+        'cont cont cont cont cont cont cont cont cont cont'
+        ;
+        padding-top: 82px;
+    }
+    .nav {
+        display: flex;
+        width: 100%;
+        height: fit-content;
+        position: absolute;
+        max-width: unset;
+        z-index: 3;
+        left:0;
+        right:0;
+        top:0;
+    }
+    .content {
+        padding-left: 0;
+    }
 }
